fix navbar alignment problems
# Conflicts:
#	js/embedCss.js

--- a/css/igv.scss
+++ b/css/igv.scss
@@ -189,9 +189,10 @@ $igv-track-components-margin: 0px;
 
   // igv logo
   .igv-logo {
+    all: initial;
     width: 34px;
     height: $igv-navbar-height;
-    margin-top:6px;
+    //margin-top:6px;
     //margin-left: 8px;
     margin-right: 8px;
   }
